State after third session

--- a/app/src/main/res/layout/activity_manage_account.xml
+++ b/app/src/main/res/layout/activity_manage_account.xml
@@ -1,9 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ManageAccountActivity">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
+    android:layout_marginBottom="15dp">
+    ​
+    <TextView
+        android:id="@+id/manageAccountEmail"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:ems="0"
+        android:text="You should never see this."/>
+    ​
+    <TextView
+        android:id="@+id/manageAccountVerificationState"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:ems="0"
+        android:text="You should never see this."/>
+    ​
+    <TextView
+        android:id="@+id/manageAccountTechnicalId"
+        android:layout_marginTop="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="15dp"
+        android:ems="0"
+        android:text="You should never see this."/>
+    ​
+    <Button
+        android:id="@+id/manageAccountButtonSignOut"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:background="@color/colorPrimary"
+        android:text="Sign Out"
+        />
+    ​
+    <Button
+        android:id="@+id/manageAccountButtonSendActivationMail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:background="@color/colorPrimary"
+        android:text="Send Activation Mail"
+        />
+    ​
+    <Space
+        android:layout_width="1dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+    ​
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:text="@string/deleteacc_text"/>
+    ​
+    <EditText
+        android:id="@+id/manageAccountPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="123456"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword" />
+    ​
+    <Button
+        android:id="@+id/manageAccountButtonDeleteAccount"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/holo_red_dark"
+        android:text="Delete Account"
+        />
+</LinearLayout>
