--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,66 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/createTestuser"
-        android:title="Create Testuser" />
+        android:id="@+id/menu_manage_account"
+        android:title="@string/manageacc_text" />
+
 
     <item
-    android:id="@+id/deleteTestuser"
-    android:title="Delete Testuser" />
+        android:id="@+id/menu_post"
+        android:title="@string/post_text" />
+
 
     <item
-    android:id="@+id/testAuthStatus"
-    android:title="Test Auth Status" />
-
-    <item
-    android:id="@+id/signInTestuser"
-    android:title="Sign in Testuser" />
-
-    <item
-    android:id="@+id/signOutTestuser"
-    android:title="Sign Out Testuser" />
-
-    <item
-    android:id="@+id/setDisplayName"
-    android:title="Set Display Name" />
-
-    <item
-    android:id="@+id/sendActivationMail"
-    android:title="Send activation mail." />
-
-    <item
-    android:id="@+id/sendResetPasswordMail"
-    android:title="Send reset password mail." />
-
-    <item
-    android:id="@+id/idSignInWithGoogle"
-    android:title="Sign In with Google" />
+        android:id="@+id/menu_write"
+        android:title="@string/writing_text" />
 
 </menu>
-
-<!--
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/mainMenuPost"
-        android:icon="?android:attr/actionModeShareDrawable"
-        android:title="Post"
-        app:showAsAction="always"
-        tools:ignore="NewApi"/>
-
-    <item
-        android:id="@+id/mainMenuManageAccount"
-        android:title="@string/manageacc_text"/>
-    <item
-        android:id="@+id/mainMenuCreateAccount"
-        android:title="@string/createacc_text"/>
-    <item
-        android:id="@+id/mainMenuDelete"
-        android:title="@string/deleteacc_text"/>
-    <item
-        android:id="@+id/mainMenuSignIn"
-        android:title="@string/signin_text"/>
-</menu>
--->
