--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -14,4 +14,8 @@
         android:id="@+id/menu_write"
         android:title="@string/writing_text" />
 
+    <item
+        android:id="@+id/menu_simulate_crash"
+        android:title="@string/simulate_crash" />
+
 </menu>
