--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,37 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context="de.hawlandshut.pluto20.PostActivity">
 
     <Button
         android:id="@+id/post_button_send"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:onClick="doPost"
-        android:text="Post" />
+        android:text="Send" />
 
     <EditText
         android:id="@+id/post_edittext_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:ems="10"
-        android:hint="Title"
-        android:inputType="text"
-        />
-
+        android:hint="Message Title"
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/post_edittext_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="top"
+        android:layout_height="300dp"
         android:ems="10"
-        android:hint="Post"
+        android:gravity="start|top"
+        android:hint="Message Text"
         android:inputType="textMultiLine" />
-
 </LinearLayout>
